--- a/css/practica_html.css
+++ b/css/practica_html.css
@@ -22,6 +22,11 @@ h2{
     text-align:left;
 }
 
+h3{
+    color: rgb(229, 210, 5); 
+    text-align:center;
+}
+
 #bloque1{
     text-align: center;
     width:99%; 
@@ -75,4 +80,18 @@ h2{
     border: 3px rgb(61, 14, 231) dashed; 
     background-color:#720888; 
     margin:auto;
+}
+
+#bloque3 img{
+    text-align:center;
+    width: 80px;
+    height: 80px; 
+    border:3px rgb(38, 48, 243) solid; 
+    border-radius: 5px;
+}
+#bloque3 p{
+    color: rgb(226, 251, 37); 
+    text-align: center; 
+    position: relative; 
+    
 }
